syntax = "proto3";

package bareos.common;

enum FileType {
  FILE_TYPE_UNSPECIFIED = 0;
  FT_LNKSAVED = 1;              /**< hard link to file already saved */
  FT_REGE = 2;                  /**< Regular file but empty */
  FT_REG = 3;                   /**< Regular file */
  FT_LNK = 4;                   /**< Soft Link */
  FT_DIREND = 5;                /**< Directory at end (saved) */
  FT_SPEC = 6;                  /**< Special file -- chr; blk; fifo; sock */
  FT_NOACCESS = 7;              /**< Not able to access */
  FT_NOFOLLOW = 8;              /**< Could not follow link */
  FT_NOSTAT = 9;                /**< Could not stat file */
  FT_NOCHG = 10;                /**< Incremental option; file not changed */
  FT_DIRNOCHG = 11;             /**< Incremental option; directory not changed */
  FT_ISARCH = 12;               /**< Trying to save archive file */
  FT_NORECURSE = 13;            /**< No recursion into directory */
  FT_NOFSCHG = 14;              /**< Different file system; prohibited */
  FT_NOOPEN = 15;               /**< Could not open directory */
  FT_RAW = 16;                  /**< Raw block device */
  FT_FIFO = 17;                 /**< Raw fifo device */
  /*
   * The DIRBEGIN packet is sent to the FD file processing routine so
   * that it can filter packets; but otherwise; it is not used
   * or saved */
  FT_DIRBEGIN = 18;             /**< Directory at beginning (not saved) */
  FT_INVALIDFS = 19;            /**< File system not allowed for */
  FT_INVALIDDT = 20;            /**< Drive type not allowed for */
  FT_REPARSE = 21;              /**< Win NTFS reparse point */
  FT_PLUGIN = 22;               /**< Plugin generated filename */
  FT_DELETED = 23;              /**< Deleted file entry */
  FT_BASE = 24;                 /**< Duplicate base file entry */
  FT_RESTORE_FIRST = 25;        /**< Restore this "object" first */
  FT_JUNCTION = 26;             /**< Win32 Junction point */
  FT_PLUGIN_CONFIG = 27;        /**< Object for Plugin configuration */
  FT_PLUGIN_CONFIG_FILLED = 28; /**< Object for Plugin configuration filled by
                                     Director */
};

message plugin_object {
  bytes name = 1;
  bytes data = 2;
  int64 index = 3;
};

message plugin_file {
  string file = 1;
  bytes stats = 2;
  FileType ft = 3;
  optional int64 delta_seq = 4;


  bool no_read = 5;
  bool portable = 6; // no idea what this means!

  // these flags change how the data is getting backed up
  // but neither of them are supported for now
  bool offset_backup = 7;
  bool sparse_backup = 8;
};

enum ReplaceType {
  REPLACE_TYPE_UNSPECIFIED = 0;
  ReplaceIfNewer = 1;
  ReplaceIfOlder = 2;
  ReplaceNever = 3;
  ReplaceAlways = 4;
};
